kube/hello-node-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    run: hello-node
    env: prod
    group: hello-app
spec:
  type: NodePort
  #type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
    protocol: TCP
  selector:
    run: hello-node
    env: prod

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hello-node
  labels:
    env: prod
    group: hello-app
    run: hello-node
spec: 
  selector:
    matchLabels:
      run: hello-node
      env: prod
  replicas: 2
  template:
    metadata:
      labels:
        run: hello-node
        env: prod
    spec:
      containers:
      - name: hello-node
        #image: hello-node:0.0.2
        image: us.gcr.io/test-kubernetes-maximede/hello-node:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
#        livenessProbe:
#          # an http probe
#          httpGet:
#            path: /management/dasdas
#            port: 8889
#          # length of time to wait for a pod to initialize
#          # after pod startup, before applying health checking
#          initialDelaySeconds: 30
#          timeoutSeconds: 1
